--- a/templates/about.html
+++ b/templates/about.html
@@ -19,8 +19,9 @@
             {% if loop.index % 2 != 0 %}
 
                 <div class="col-md-7">
-                    <h3>{{ loop.index }}. {{ member.name }}</h3>
-                    <p>{{ member.description }}</p>
+                    <h3><a href="/about/{{ member.url }}">{{ loop.index }}. {{ member.name }}</a></h3>
+                    <p>{{ member.short_description }}</p>
+                    <a href="/about/{{ member.url }}" class="btn btn-success">Read More</a>
                 </div>
                 <div class="col-md-5">
                     <img src="{{ member.image_source }}" alt="" class="featurette-image image-responsive">
@@ -32,8 +33,9 @@
                     <img src="{{ member.image_source }}" alt="" class="featurette-image image-responsive">
                 </div>
                 <div class="col-md-7">
-                    <h3>{{ loop.index }}. {{ member.name }}</h3>
-                    <p>{{ member.description }}</p>
+                    <h3><a href="/about/{{ member.url }}">{{ loop.index }}. {{ member.name }}</a></h3>
+                    <p>{{ member.short_description }}</p>
+                    <a href="/about/{{ member.url }}" class="btn btn-success">Read More</a>
                 </div>
 
             {% endif %}
