Add fontwsome cdn

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/clean-blog.min.css') }}">
 
+    <!-- FONTAWSOME CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
+
     <!-- MY CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>{{ page_title }}</title>
